--- a/index.html
+++ b/index.html
@@ -4,44 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minds of Tomorrow</title>
-    <link rel="stylesheet" href="/css/css.css">
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
     <header>
-        <h1>Minds of Tomorrow</h1>
-        <img src="/imagenes/banner-1.jpg" alt="Banner principal">
+        <h1>Welcome to the creative after-school</h1>
+        <img src="imagenes/banner-1.jpg" alt="Banner 1">
+        <img src="imagenes/banner-2.jpg" alt="Banner 2">
     </header>
-    <main>
-        <section class="intro">
-            <h2>Welcome to the creative after-school</h2>
-            <p>Our enrichment programs boost your kid to a brighter future.</p>
-            <img src="/imagenes/banner-2.jpg" alt="Intro Image">
-        </section>
-        <section class="programs">
-            <h2>Our Programs</h2>
-            <div class="program-list">
-                <div class="program">Robotics <img src="/imagenes/section-1.png" alt="Robotics"></div>
-                <div class="program">Sustainable <img src="/imagenes/section-2-a.jpeg" alt="Sustainable"></div>
-                <div class="program">Digital <img src="/imagenes/section-2-b.jpeg" alt="Digital"></div>
-                <div class="program">Gaming <img src="/imagenes/section-2-c.jpeg" alt="Gaming"></div>
-            </div>
-        </section>
-        <section class="studio">
-            <h2>Unlock your potential in our Miami studio</h2>
-            <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers.</p>
-            <img src="/imagenes/section-3.png" alt="Miami Studio">
-        </section>
-    </main>
+    <section class="introduction">
+        <p>Our enrichment programs boost your kid to a brighter future.</p>
+        <p>Embark your kid into an inspirational journey of fun and discovery through a hands-on approach.</p>
+        <img src="imagenes/section-1.png" alt="Introduction Image">
+    </section>
+    <section class="programs">
+        <h2>Innovative programs for ages 6 to 13.</h2>
+        <div class="program-images">
+            <img src="imagenes/section-2-a.jpeg" alt="Activity 1">
+            <img src="imagenes/section-2-b.jpeg" alt="Activity 2">
+            <img src="imagenes/section-2-c.jpeg" alt="Activity 3">
+            <img src="imagenes/section-2-d.jpeg" alt="Activity 4">
+        </div>
+    </section>
+    <section class="studio">
+        <h2>Unlock your potential in our Miami studio</h2>
+        <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
+        <img src="imagenes/section-3.png" alt="Miami Studio">
+    </section>
+    <section class="extra-images">
+        <img src="imagenes/section-4-a.jpg" alt="Extra Image 1">
+        <img src="imagenes/section-4-b.jpg" alt="Extra Image 2">
+        <img src="imagenes/section-4-c.jpg" alt="Extra Image 3">
+        <img src="imagenes/section-4-d.jpg" alt="Extra Image 4">
+    </section>
     <footer>
-        <p>&copy; Minds of Tomorrow, LLC. 2020</p>
-        <nav>
-            <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Our Programs</a></li>
-                <li><a href="#">The Studio</a></li>
-            </ul>
-        </nav>
+        <div class="footer-content">
+            <p>&copy; Minds of Tomorrow, LLC 2020</p>
+            <nav>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Our programs</a>
+                <a href="#">The Studio</a>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
