--- a/index.html
+++ b/index.html
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minds of Tomorrow</title>
-    <link rel="stylesheet" href="css/css.css">
+    <meta charset="UTF-8"> <!-- Codificación de caracteres -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Diseño adaptable -->
+    <title>Minds of Tomorrow</title> <!-- Título de la página -->
+    <link rel="stylesheet" href="css/css.css"> <!-- Enlace al archivo CSS -->
 </head>
-<body>
-    <header>
+<body> <!-- Inicio del cuerpo del documento -->
+    <header class="hero">
         <h1>Welcome to the creative after-school</h1>
-        <img src="imagenes/banner-1.jpg" alt="Banner 1">
-        <img src="imagenes/banner-2.jpg" alt="Banner 2">
     </header>
-    <section class="introduction">
-        <p>Our enrichment programs boost your kid to a brighter future.</p>
-        <p>Embark your kid into an inspirational journey of fun and discovery through a hands-on approach.</p>
-        <img src="imagenes/section-1.png" alt="Introduction Image">
+
+    <section class="intro-section">
+        <div class="intro-text">
+            <h2>Our enrichment programs boost your kid to a brighter future.</h2>
+            <p>Embark your kid into an inspirational journey of fun and discovery through a hands-on approach.</p>
+        </div>
+        <div class="intro-img">
+            <img src="imagenes/section-1.png" alt="Intro Image">
+        </div>
     </section>
+
     <section class="programs">
         <h2>Innovative programs for ages 6 to 13.</h2>
-        <div class="program-images">
-            <img src="imagenes/section-2-a.jpeg" alt="Activity 1">
-            <img src="imagenes/section-2-b.jpeg" alt="Activity 2">
-            <img src="imagenes/section-2-c.jpeg" alt="Activity 3">
-            <img src="imagenes/section-2-d.jpeg" alt="Activity 4">
+        <div class="program-list">
+            <div class="program-item">
+                <p>Robotics</p>
+                <img src="imagenes/section-2-a.jpeg" alt="Robotics">
+            </div>
+            <div class="program-item">
+                <p>Sustainable</p>
+                <img src="imagenes/section-2-b.jpeg" alt="Sustainable">
+            </div>
+            <div class="program-item">
+                <p>Digital</p>
+                <img src="imagenes/section-2-c.jpeg" alt="Digital">
+            </div>
+            <div class="program-item">
+                <p>Gaming</p>
+                <img src="imagenes/section-2-d.jpeg" alt="Gaming">
+            </div>
         </div>
     </section>
     <section class="studio">
-        <h2>Unlock your potential in our Miami studio</h2>
-        <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
-        <img src="imagenes/section-3.png" alt="Miami Studio">
+        <div class="studio-info">
+            <h2>Unlock your potential in our Miami studio</h2>
+            <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
+        </div>
+        <div class="studio-img">
+            <img src="imagenes/section-3.png" alt="Miami Studio">
+        </div>
     </section>
-    <section class="extra-images">
-        <img src="imagenes/section-4-a.jpg" alt="Extra Image 1">
-        <img src="imagenes/section-4-b.jpg" alt="Extra Image 2">
-        <img src="imagenes/section-4-c.jpg" alt="Extra Image 3">
-        <img src="imagenes/section-4-d.jpg" alt="Extra Image 4">
+    <section class="meet">
+        <div class="meet-grid">
+            <div class="meet-grid-item"><img src="imagenes/section-4-a.jpg" alt="Team 1"></div>
+            <div class="meet-grid-item"><img src="imagenes/section-4-b.jpg" alt="Team 2"></div>
+            <div class="meet-grid-item"><img src="imagenes/section-4-c.jpg" alt="Team 3"></div>
+            <div class="meet-grid-item"><img src="imagenes/section-4-d.jpg" alt="Team 4"></div>
+        </div>
+        <div class="meet-text">
+            <p>Come meet us. We would love to get to know you!</p>
+        </div>
     </section>
-    <footer>
-        <div class="footer-content">
-            <p>&copy; Minds of Tomorrow, LLC 2020</p>
-            <nav>
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Our programs</a>
-                <a href="#">The Studio</a>
-            </nav>
+    <footer class="footer">
+        <div>
+            &copy; Minds of Tomorrow, LLC. 2020
+        </div>
+        <div>
+            <p>Facebook</p>
+            <p>Instagram</p>
+        </div>
+        <div>
+            <p>Our programs</p>
+            <p>The Studio</p>
         </div>
     </footer>
-</body>
-</html>
+</body> <!-- Fin del cuerpo del documento -->
+</html> <!-- Fin del documento HTML -->
