--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> <!-- Define el idioma del documento -->
 <head>
     <meta charset="UTF-8"> <!-- Codificación de caracteres -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Diseño adaptable -->
@@ -7,70 +7,73 @@
     <link rel="stylesheet" href="css/css.css"> <!-- Enlace al archivo CSS -->
 </head>
 <body> <!-- Inicio del cuerpo del documento -->
-    <header class="hero">
-        <h1>Welcome to the creative after-school</h1>
+    <header class="hero"> <!-- Sección de encabezado con imagen de fondo -->
+        <h1>Welcome to the creative after-school</h1> <!-- Título principal -->
     </header>
 
-    <section class="intro-section">
-        <div class="intro-text">
-            <h2>Our enrichment programs boost your kid to a brighter future.</h2>
-            <p>Embark your kid into an inspirational journey of fun and discovery through a hands-on approach.</p>
+    <section class="intro-section"> <!-- Primera sección con texto e imagen -->
+        <div class="intro-text"> <!-- Contenedor para el texto -->
+            <h2>Our enrichment programs boost your kid to a brighter future.</h2> <!-- Subtítulo -->
+            <p>Embark your kid into an inspirational journey of fun and discovery through a hands-on approach.</p> <!-- Descripción -->
         </div>
-        <div class="intro-img">
-            <img src="imagenes/section-1.png" alt="Intro Image">
+        <div class="intro-img"> <!-- Contenedor para la imagen -->
+            <img src="imagenes/section-1.png" alt="Intro Image"> <!-- Imagen -->
         </div>
     </section>
 
-    <section class="programs">
-        <h2>Innovative programs for ages 6 to 13.</h2>
-        <div class="program-list">
-            <div class="program-item">
-                <p>Robotics</p>
-                <img src="imagenes/section-2-a.jpeg" alt="Robotics">
+    <section class="programs"> <!-- Sección de programas -->
+        <h2>Innovative programs for ages 6 to 13.</h2> <!-- Título de la sección -->
+        <div class="program-list"> <!-- Contenedor de lista de programas -->
+            <div class="program-item"> <!-- Programa individual -->
+                <p>Robotics</p> <!-- Nombre del programa -->
+                <img src="imagenes/section-2-a.jpeg" alt="Robotics"> <!-- Imagen del programa -->
             </div>
-            <div class="program-item">
-                <p>Sustainable</p>
-                <img src="imagenes/section-2-b.jpeg" alt="Sustainable">
+            <div class="program-item"> <!-- Programa individual -->
+                <p>Sustainable</p> <!-- Nombre del programa -->
+                <img src="imagenes/section-2-b.jpeg" alt="Sustainable"> <!-- Imagen del programa -->
             </div>
-            <div class="program-item">
-                <p>Digital</p>
-                <img src="imagenes/section-2-c.jpeg" alt="Digital">
+            <div class="program-item"> <!-- Programa individual -->
+                <p>Digital</p> <!-- Nombre del programa -->
+                <img src="imagenes/section-2-c.jpeg" alt="Digital"> <!-- Imagen del programa -->
             </div>
-            <div class="program-item">
-                <p>Gaming</p>
-                <img src="imagenes/section-2-d.jpeg" alt="Gaming">
+            <div class="program-item"> <!-- Programa individual -->
+                <p>Gaming</p> <!-- Nombre del programa -->
+                <img src="imagenes/section-2-d.jpeg" alt="Gaming"> <!-- Imagen del programa -->
             </div>
         </div>
     </section>
-    <section class="studio">
-        <div class="studio-info">
-            <h2>Unlock your potential in our Miami studio</h2>
-            <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p>
+
+    <section class="studio"> <!-- Sección del estudio en Miami -->
+        <div class="studio-info"> <!-- Contenedor para el texto -->
+            <h2>Unlock your potential in our Miami studio</h2> <!-- Título -->
+            <p>Our new studio in Miami features a Tech Room, an Open Creative Gallery, and a Hangout Zone for parents or caregivers with plenty of room for social distancing.</p> <!-- Descripción -->
         </div>
-        <div class="studio-img">
-            <img src="imagenes/section-3.png" alt="Miami Studio">
+        <div class="studio-img"> <!-- Contenedor para la imagen -->
+            <img src="imagenes/section-3.png" alt="Miami Studio"> <!-- Imagen -->
         </div>
     </section>
-    <section class="meet">
-        <div class="meet-grid">
-            <div class="meet-grid-item"><img src="imagenes/section-4-a.jpg" alt="Team 1"></div>
-            <div class="meet-grid-item"><img src="imagenes/section-4-b.jpg" alt="Team 2"></div>
-            <div class="meet-grid-item"><img src="imagenes/section-4-c.jpg" alt="Team 3"></div>
-            <div class="meet-grid-item"><img src="imagenes/section-4-d.jpg" alt="Team 4"></div>
+
+    <section class="meet"> <!-- Sección para conocernos -->
+        <div class="meet-grid"> <!-- Cuadrícula de imágenes -->
+            <div class="meet-grid-item"><img src="imagenes/section-4-a.jpg" alt="Team 1"></div> <!-- Imagen individual -->
+            <div class="meet-grid-item"><img src="imagenes/section-4-b.jpg" alt="Team 2"></div> <!-- Imagen individual -->
+            <div class="meet-grid-item"><img src="imagenes/section-4-c.jpg" alt="Team 3"></div> <!-- Imagen individual -->
+            <div class="meet-grid-item"><img src="imagenes/section-4-d.jpg" alt="Team 4"></div> <!-- Imagen individual -->
         </div>
-        <div class="meet-text">
+        <div class="meet-text"> <!-- Texto de la sección -->
             <p>Come meet us. We would love to get to know you!</p>
         </div>
     </section>
-    <footer class="footer">
-        <div>
+
+    <footer class="footer"> <!-- Pie de página -->
+        <div> <!-- Contenedor para derechos de autor -->
             &copy; Minds of Tomorrow, LLC. 2020
         </div>
-        <div>
+        <div> <!-- Contenedor para enlaces sociales -->
             <p>Facebook</p>
             <p>Instagram</p>
         </div>
-        <div>
+        <div> <!-- Contenedor para enlaces adicionales -->
             <p>Our programs</p>
             <p>The Studio</p>
         </div>
